[project]
name = "mto-front-identifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bottleneck>=1.6.0",
    "cartopy>=0.25.0",
    "cfgrib>=0.9.15.1",
    "dask>=2026.1.2",
    "eccodes>=2.45.0",
    "matplotlib>=3.10.8",
    "metpy>=1.7.1",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "xarray>=2026.2.0",
]
